<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.log_in.LoginFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/sivImage"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/tiLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_vostok"
        app:shapeAppearanceOverlay="@style/RoundedImageView"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/Mail"
        app:layout_constraintBottom_toTopOf="@id/tiPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sivImage"
        android:background="@color/white"
        app:boxStrokeColor="@color/blue"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/black"
        app:hintTextAppearance="@style/MyHintTextStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_login"
            android:drawablePadding="10dp"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiLogin"
        app:passwordToggleEnabled="true"
        android:background="@color/white"
        app:boxStrokeColor="@color/blue"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/black"
        app:hintTextAppearance="@style/MyHintTextStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cbSaveData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/RememberData"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/btResetPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btResetPassword" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/resetPassword"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@id/tiPassword"
        app:layout_constraintTop_toBottomOf="@id/tiPassword" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:paddingVertical="15dp"
        android:text="@string/Enter"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_enter"
        app:iconGravity="textStart"
        app:iconTintMode="multiply"
        app:layout_constraintBottom_toTopOf="@id/tvHaveAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#D8DADC"
        app:strokeWidth="2dp"
        app:iconSize="23dp"/>

    <View
        android:id="@+id/viewOne"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/tvHaveAcc"
        app:layout_constraintEnd_toStartOf="@id/tvHaveAcc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvHaveAcc" />

    <TextView
        android:id="@+id/tvHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:paddingHorizontal="10dp"
        android:text="@string/notAcc"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/btSignUp"
        app:layout_constraintEnd_toStartOf="@id/viewTwo"
        app:layout_constraintStart_toEndOf="@id/viewOne" />

    <View
        android:id="@+id/viewTwo"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/tvHaveAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvHaveAcc"
        app:layout_constraintTop_toTopOf="@id/tvHaveAcc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#01943E"
        android:fontFamily="@font/roboto_regular"
        android:paddingVertical="15dp"
        android:text="@string/SignUp"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:icon="@drawable/ic_add_user"
        app:iconGravity="textStart"
        app:iconSize="25dp"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btResetPassword"
        android:layout_marginTop="10dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading_anim" />


</androidx.constraintlayout.widget.ConstraintLayout>