<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.recover.password.PasswordFragment"
    android:padding="20dp"
    android:background="@color/white">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiNewsPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/newsPassword"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        app:boxStrokeColor="@color/blue"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiApplyPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiNewsPassword"
        android:hint="@string/apply_pass"
        android:layout_marginTop="7dp"
        android:background="@color/white"
        app:boxStrokeColor="@color/blue"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingVertical="15dp"
        app:cornerRadius="10dp"
        android:text="@string/Save"
        android:textSize="20sp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/roboto_medium_italic" />

</androidx.constraintlayout.widget.ConstraintLayout>